# decayWithSpinBug

./: CMakeLists.txt  README.md  debuggingOutput.txt  runSim.cc  vis.mac
src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh
